# code-guardian

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
code_guardian/: cli.py  errors.py  models.py  orchestrator.py  pipeline.py  utils.py
code_guardian/adapters/: cloner.py  github.py  trivy.py
code_guardian/graph/: __init__.py  builder.py  render.py
code_guardian/reporting/: __init__.py  json_report.py  pdf_report.py  summary.py
tests/: test_graph_builder.py  test_models.py  test_pipeline.py
