[project]
name = "code-guardian"
version = "0.1.0"
description = "CLI wrapper for Trivy that scans Git repositories and reports vulnerabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "httpx>=0.28.1",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["code_guardian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires real Trivy/GitHub network access"]
